--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "harmoney-v1",
-  "version": "0.1.0",
+  "name": "takimaster",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,7 +15,12 @@
     "next": "13.2.4",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-spring": "^9.7.1",
+    "react-spring-bottom-sheet": "^3.4.1",
+    "react-use-gesture": "^9.1.3",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
