--- a/package.json
+++ b/package.json
@@ -10,18 +10,14 @@
     "push": "git add . && git commit -m \"update\" && git push origin main"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^10.1.0",
     "next": "13.2.4",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0",
-    "react-spring": "^9.7.1",
-    "react-spring-bottom-sheet": "^3.4.1",
-    "react-use-gesture": "^9.1.3",
-    "swiper": "^9.4.1"
+    "react-icons": "^4.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
